# stm32f103-freertos-smartcar

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  打开我_使用说明.txt
App/Inc/: app.h  app_config.h  app_types.h  pid.h  protocol.h
App/Src/: app.c  app_config.c  pid.c  protocol.c
BSP/Inc/: board.h  bsp.h
BSP/Src/: bsp.c  oled.c
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c
artifacts/: BUILD_REPORT.md  SHA256SUMS.txt
artifacts/C8/: smartcar_C8.elf  smartcar_C8.hex  smartcar_C8.map
artifacts/RCT6/: smartcar_RCT6.elf  smartcar_RCT6.hex  smartcar_RCT6.map
cmake/: arm-gcc-toolchain.cmake
docs/: 00_项目总览与实现功能.md  01_硬件接线.md  02_软件架构.md  03_蓝牙串口协议.md  04_标定与调试.md  05_验收清单.md  06_完成状态.md  07_增强功能原理.md  08_代码导读与注释说明.md  09_操作步骤_从零到运行.md  10_组件说明与选型.md  11_常见问题.md  12_增强版更新说明.md  13_GitHub发布说明.md  14_v2.0.0_发布说明.md
hardware/: BOM.csv  default_parameters.csv  pinmap.csv
linker/: STM32F103C8T6.ld  STM32F103RCT6.ld
scripts/: build.ps1  car_console.py  flash.ps1  install_tools.ps1  test_all.ps1  test_host.ps1  validate_project.py  verify_artifacts.ps1
tests/: test_pid_protocol.c
